Bug 475422 - Status bar shows the wrong path for relative symbolic links
Summary: Status bar shows the wrong path for relative symbolic links
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: bars: status (other bugs)
Version First Reported In: 23.08.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-10 12:33 UTC by Topi
Modified: 2024-04-27 10:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Comparison between the status for absolute and relative symbolic links (12.39 KB, image/png)
2023-10-10 12:33 UTC, Topi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Topi 2023-10-10 12:33:48 UTC
Created attachment 162185 [details]
Comparison between the status for absolute and relative symbolic links

SUMMARY
Dolphin status bar shows a file url to the symbolic link itself rather than the target for relative symbolic links. Absolute symlinks  work as expected.

STEPS TO REPRODUCE
1. Create a relative symbolic link.
2. Select it and look at the status bar.

OBSERVED RESULT
Status bar shows a file url to the link itself.

EXPECTED RESULT
Status bar shows a path to the target.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110
Qt Version: 5.15.11
Comment 1 Bug Janitor Service 2024-01-29 05:50:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1544
Comment 2 Méven Car 2024-04-27 10:00:37 UTC
Git commit 8ed2639ba846f79f2b7dcbd7dde84d4339b860fc by Méven Car, on behalf of Jin Liu.
Committed on 27/04/2024 at 10:00.
Pushed by meven into branch 'master'.

KFileItem: fix getStatusBarInfo() displaying symlink target as "http:"

Tested on local and `fish:` paths.

Add unit test for getStatusBarInfo() on relative symlinks

It only happens when KFileItem is constructed from UDSEntry.

M  +45   -0    autotests/kfileitemtest.cpp
M  +1    -0    autotests/kfileitemtest.h
M  +1    -1    src/core/kfileitem.cpp

https://invent.kde.org/frameworks/kio/-/commit/8ed2639ba846f79f2b7dcbd7dde84d4339b860fc