KFileItem: fix getStatusBarInfo() displaying symlink target as "http:"

Tested on local and `fish:` paths.

Add unit test for getStatusBarInfo() on relative symlinks

It only happens when KFileItem is constructed from UDSEntry.

BUG: 475422